2006-10-24 Damien Raude-Morvan <drazzib@drazzib.com>
	* Fix french translation used for account validation to use same number of token as original message.
	* Only show language combo when there is more than one language to select.

2006-10-24 Benoit Grégoire  <bock@step.polymtl.ca>
	* EmbeddedContent.php:  Fix content type selection (admin interface of EmbeddedContent was broken)
	* Full spanish translation curtesy of jguevara @@ unitec.edu (closes #254)
	* Some documentation updates for content filters
	* Content.php:  Add isNotContentType() method.
	
2006-09-07 Benoit Grégoire  <bock@step.polymtl.ca>
	* Access to the Content manager was broken for normal users, again.

2006-09-11 François Proulx <francois.proulx@gmail.com>
	* Changed install.php req. for Smarty 2.6.17 is mandatory
	* ContentTypeFilter.php fixed the method checking function
	* Fixed errors in French translation file

2006-09-07 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix PHPMailer that I've broken earlier

2006-09-07 Benoit Grégoire  <bock@step.polymtl.ca>
	* Slightly rework SSL detection so that it uses the default server if a current one isn't available.
		Fixes server passing passwords in the clear if the hostname disn't match (DOH!).
		We really should properly split the Server class into a singleton Server class and multiple VirtualHost classes.
	* Re-apply fixed HTMLeditor patch.  (Original description:  Make HTMLeditor inherit from Langstring.  Allowed a massive reduction of
	  line count and will stop the codebases from needlessly drifting apart.)

2006-09-07 Benoit Grégoire  <bock@step.polymtl.ca>
	* Add missing require of Statistics.php in stats.php

2006-09-07 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix non persistent content being available to add to nodes, networks and content groups.
	* Prevent a user from entering the same language twice in a langstring.  Fixes #226

2006-09-06 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix #63